# spot-check-firmware

./: '  .clang-format  .gdbinit  .gitignore  8mb_partitions_two_ota.csv  CMakeLists.txt  Makefile  README.md  raw_img_to_c_array.py  release.sh
components/FreeRTOS+CLI/: CMakeLists.txt  FreeRTOS_CLI.c  FreeRTOS_CLI.h  Kconfig  component.mk
components/epd_driver/: CMakeLists.txt  display_ops.h  i2s_data_bus.c  i2s_data_bus.h  lut.c  rmt_pulse.c
components/epd_driver/board/: epd_board_v5.c
components/led_strip/: CMakeLists.txt  Kconfig  ws2812_led_strip.c
components/led_strip/include/: led_strip.h
components/led_text/: CMakeLists.txt  Kconfig  component.mk  fonts.c  led_text.c
components/led_text/include/: fonts.h  led_text.h
configuration_app/: requirements.txt  spot_check_configure.py  spot_check_configure.spec
configuration_app/tools/esp_prov/: esp_prov.py
main/: CMakeLists.txt  Kconfig.projbuild  bq24196.c  cd54hc4094.c  cli_commands.c  cli_task.c  conditions_task.c  display.c  flash_partition.c  gpio.c  gpio_local.c  http_client.c  http_server.c  i2c.c  json.c  log.c  main.c  mdns_local.c  memfault_interface.c  memfault_platform_port.c  nvs.c  ota_task.c  raw_image.c  scheduler_task.c  screen_img_handler.c  sleep_handler.c  sntp_time.c  spot_check.c  timer.c  uart.c  url_decode.c  wifi.c
main/include/: bq24196.h  cd54hc4094.h  cli_commands.h  cli_task.h  conditions_task.h  constants.h  display.h  firasans_10.h  firasans_15.h  firasans_20.h  firasans_40.h  flash_partition.h  gpio.h  gpio_local.h  http_client.h  http_server.h  i2c.h  json.h  log.h  mdns_local.h  memfault_interface.h  memfault_metrics_heartbeat_config.def  nvs.h  ota_task.h  raw_image.h  scheduler_task.h  screen_img_handler.h  sleep_handler.h  sntp_time.h  spot_check.h  timer.h  uart.h  url_decode.h  wifi.h
scripts/: spot_check_configure.py  timezones.db
server_certs/: ca_cert.pem  dbg_cert.pem
